--- a/pitch-for-good-front/index.html
+++ b/pitch-for-good-front/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./css/global.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <link rel="stylesheet" type="text/css" href="./css/header.css">
     <title>Pitch For Good</title>
 </head>
 <body>
@@ -14,7 +12,7 @@
     
     <div id="app"></div>
 
-    <script src="js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 
 </body>
 </html>
